@@ -1,5 +1,10 @@
 2009-09-10  Rudy Neeser  <rudy.neeser@gmail.com>
 
+	* interpolate.lisp (between): Added a method to calculate the
+	point between two vectors.
+	(linear-interpolation): Modified so that it accepts lists as
+	arguments as well.
+
 	* vector.lisp (to-vector): Added a key to specify the dimension of
 	the vector to transform the data to.
 
